--- a/src/style/todo.scss
+++ b/src/style/todo.scss
@@ -15,6 +15,7 @@
     .form-title {
       font-size: 3em;
       color: #2a3166;
+      text-align: center;
     }
 
     .todo-input {
@@ -61,6 +62,10 @@
       padding: 2px;
       width: 50%;
       overflow: auto;
+
+      .todos {
+        text-align: center;
+      }
     }
   }
 
@@ -96,8 +101,43 @@
     }
   }
 }
+@media (max-width: 1000px) {
+  .forms-wrapper {
+    .form {
+      .form-title {
+        font-size: 2em;
+      }
+    }
 
-@media (max-width: 500px) {
+    .todos-wrapper {
+      .todo-title {
+        font-size: 2.5em;
+      }
+
+      .todo-content {
+        font-size: 1.25em;
+      }
+    }
+  }
+}
+
+@media (max-width: 805px) {
+  .forms-wrapper {
+    .form {
+      .form-title {
+        font-size: 1.75em;
+      }
+    }
+
+    .todo-wrapper {
+      .todo-content {
+        font-size: 1em;
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
   .forms-wrapper {
     display: grid;
     grid-template-columns: auto;
@@ -113,16 +153,20 @@
 
     .todos-wrapper {
       margin-top: -125px;
+
       .todo-title {
         font-size: 2.5em;
         text-align: center;
-        margin-top: 60px;
+        margin-top: 70px;
+      }
+
+      .todo-content {
+        font-size: 1.5em;
       }
 
       .render-wrapper {
         height: 50vh;
         width: 75vw;
-
         overflow: auto;
 
         .todos {
